fixed annoying whitespace on the right

--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,9 @@
 html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  width: 100%;
-	font-family: 'Lato', sans-serif;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    font-family: 'Lato', sans-serif;
 	color: white;
 }
 
@@ -54,12 +54,9 @@ a{
 }
 
 #intro {
-  width: 100%;
   height: 100%;
-  margin: 0 auto;
   background: url(https://images.unsplash.com/photo-1510852151262-05bfbfbe996d?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9%0A&s=6096e3b1165006375173b972a4fa7a7d);
   background-size: cover;
-  background-color: black;
   background-position: center;
 }
 
@@ -86,7 +83,7 @@ a{
 }
 
 hr {
-	width: 75%;
+	width: 55%;
 	border: 0;
   height: 1px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
@@ -113,20 +110,6 @@ hr {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(83, 97, 108, 0.75), rgba(0, 0, 0, 0));
 }
 
-
-.navbar-default {
-    background-color: rgb(0,0,0);
-    border-color: transparent;
-}
-
-.navbar-default .navbar-brand {
-    color: white;
-}
-
-.navbar-default .navbar-nav>li>a {
-    color: white;
-}
-
 #portfolio {
   border-top: 2px solid white;
   padding: 70px 70px;
@@ -149,10 +132,6 @@ hr {
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: minmax(100px, auto);
 
-}
-
-.box{
-    background-color: black;
 }
 
 .image {
@@ -493,12 +472,11 @@ hr {
 }
 
 .footer h3 {
-  border-bottom: 1px solid #BAC1C8;
   color: white;
   font-size: 18px;
   font-weight: 600;
   line-height: 27px;
-  padding: 40px 0 10px;
+  padding: 40px 0 0 0;
   text-transform: uppercase;
   text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
                0px 8px 13px rgba(0,0,0,0.1),
@@ -509,8 +487,9 @@ hr {
   list-style-type: none;
   margin-left: 0;
   padding-left: 0;
-  margin-top: 15px;
 }
+
+
 
 .footer ul li a {
   padding: 0 0 5px 0;
@@ -564,6 +543,20 @@ a:hover .fa-circle:before{
 .fa-google-plus:before{
   color: white;
 }
+
+.navbar-default {
+    background-color: rgb(0,0,0);
+    border-color: transparent;
+}
+
+.navbar-default .navbar-brand {
+    color: white;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: white;
+}
+
 
 .navigation {
     width: 100%;
